# min-standalone

./: min-standalone.cabal  reproduce.sh
Reproduce/: StandaloneHaddock.hs
